fix(frontend): format toolConfig to unshift the fake value when saving configs

--- a/apps/frontend/src/pages/annotationConfig/index.less
+++ b/apps/frontend/src/pages/annotationConfig/index.less
@@ -63,7 +63,7 @@
     // display: flex;
     // justify-content: flex-start;
     .leftSider {
-      overflow: scroll;
+      overflow: auto;
       width: 596px;
       height: 100%;
       background-color: #fff;
@@ -74,7 +74,6 @@
 
       .leftPane {
         width: 100%;
-        height: 100%;
         // background-color: #ddd;
         position: relative;
         // overflow-x: hidden;
@@ -207,7 +206,7 @@
       }
 
       .rightContent {
-        height: calc(100vh - 260px);
+        height: calc(100vh - 216px);
       }
 
       .notMatchBox {
